syntax = "proto2";

import "opts.proto";

message sctp_stream_entry {
	required bool		io_event	= 1;
	required bool		ass_event	= 2;
	required bool		shut_event	= 3;
	required uint32		num_ostreams	= 4;
	required uint32		max_instreams	= 5;
	required uint32		max_attempts	= 6;
	required uint32		max_init_timeo	= 7;
	required uint32		inq_len		= 8;
	required uint32		inq_seq		= 9;
	required uint32		outq_len	= 10; /* unsent and sent data in the send queue*/
	required uint32		outq_seq	= 11;

	required uint32		opt_mask	= 12 [(criu).hex = true]; /* TCPI_OPT_ bits */
	required uint32		snd_wscale	= 13;
	required uint32		mss_clamp	= 14;
	optional uint32		rcv_wscale	= 15;
	optional uint32		timestamp	= 16;

	optional bool		cork		= 17;
	optional bool		nodelay		= 18;

	optional uint32		unsq_len	= 19; /* unsent data in the send queue */

	optional uint32		snd_wl1		= 20;
	optional uint32		snd_wnd		= 21;
	optional uint32		max_window	= 22;
	optional uint32		rcv_wnd		= 23;
	optional uint32		rcv_wup		= 24;
}
